# myserver

./: CMakeLists.txt  test_client.py
docs/: ARCHITECTURE.md
include/: Connection.h  Server.h  protocol.h  ringbuffer.h  utils.h
src/: Connection.cpp  Server.cpp  main.cpp  protocol.cpp  protocol.h  ringbuffer.cpp
test/: bench_client.cpp  n_to_n.py  test.py
